syntax = "proto3";
package Multipleclientsserver;
option go_package = "grpc/proto.proto";

service ChittyChat {
    rpc Join (JoinRequest) returns (stream Message);
    rpc Publish (Message) returns (Empty);
}

message JoinRequest {
    string user = 1;
    int64 lamportClock = 2;
}

message Message {
    string user = 1;
    string message = 2;
    int64 lamportClock = 3;
}

message Empty {}
//go mod init Multipleclientsserver (Hvad mappen hedder) OBS this have to be exactly the same as the go_package name on top of this document
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative grpc/proto.proto
//go mod tidy